force-app/main/default/objects/ServiceMaster__c/fields/MinSellingUnitPriceUSD__c.field-meta.xml
<CustomField>
    <fullName>MinSellingUnitPriceUSD__c</fullName>
    <label>MIN SELLING UNIT PRICE(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>