force-app/main/default/objects/ServiceMaster__c/fields/ParentServiceID__c.field-meta.xml
<CustomField>
    <fullName>ParentServiceID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PARENT SERVICE ID</label>
    <referenceTo>ServiceMaster__c</referenceTo>
    <relationshipLabel>CHILD SERVICE</relationshipLabel>
    <relationshipName>ParentServiceID</relationshipName>
    <type>Lookup</type>
</CustomField>