force-app/main/default/objects/ServiceMaster__c/fields/ServiceDetail__c.field-meta.xml
<CustomField>
    <fullName>ServiceDetail__c</fullName>
    <label>SERVICE DETAIL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>