force-app/main/default/objects/ServiceMaster__c/fields/ServicePhoto__c.field-meta.xml
<CustomField>
    <fullName>ServicePhoto__c</fullName>
    <label>SERVICE PHOTO</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>