force-app/main/default/objects/ServiceMaster__c/fields/StandardSellingUnitPriceLocal__c.field-meta.xml
<CustomField>
    <fullName>StandardSellingUnitPriceLocal__c</fullName>
    <label>STANDARD SELLING UNIT PRICE(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>