force-app/main/default/objects/ServiceMaster__c/recordTypes/LogisticService.recordType-meta.xml
<RecordType>
    <fullName>LogisticService</fullName>
    <active>true</active>
    <label>Logistic Service</label>
</RecordType>