force-app/main/default/objects/ServiceMaster__c/recordTypes/ServiceRelatedWithProduct.recordType-meta.xml
<RecordType>
    <fullName>ServiceRelatedWithProduct</fullName>
    <active>true</active>
    <label>Service Related with Product</label>
</RecordType>