force-app/main/default/objects/ServiceMaster__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>ServiceName__c</columns>
    <columns>ServiceProviderVendor__c</columns>
    <columns>Quantity__c</columns>
    <columns>BuyingUnitPriceLocal__c</columns>
    <columns>BuyingUnitPriceUSD__c</columns>
    <columns>StandardMarginRate__c</columns>
    <columns>StandardSellingUnitPriceLocal__c</columns>
    <columns>StandardSellingUnitPriceUSD__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>